tests/compile_error/unnamed_struct.rs
use getset2::Getter;

#[derive(Getter)]
pub struct UnnamedStruct(u8);

fn main() {}
