tests/compile_error/unnamed_struct.stderr
error: #[derive(Getter)] can only be applied to structure with named fields
 --> tests/compile_error/unnamed_struct.rs:4:1
  |
4 | pub struct UnnamedStruct(u8);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
